@@ -76,6 +76,10 @@ IN DEVELOPMENT
       the ``--use-existing-dir`` flag.
       (John Arbash Meinel, #30576, #45504)
 
+    * Lack of http authorization support in test framework, a
+      typo in prroxy handling have been unnoticed. (Vincent
+      Ladeuil, #83954).
+
   TESTING:
 
     * New ``--first`` option to ``bzr selftest`` to run specified tests
